# WorkBase

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  WorkBase.sln  add-logout-uri.sh  clear-admin-sessions.sh  configure-hub-idp.sh  configure-hub-role.sh  configure-keycloak-production.sh  diag-callback.sh  diag-kc-sso.sh  diag-kc-sso2.sh  fix-tenant-claim3.sh  link-existing-hub-users.sh  render.yaml
.github/workflows/: cd-staging.yml  ci.yml  migrations.yml
docker/: Dockerfile  Dockerfile.frontend  Dockerfile.keycloak  docker-compose.dev.yml  docker-compose.staging.yml  fix-audience.sh  staging.env.example
docker/keycloak/: workbase-realm.json
docker/postgres/: audit-immutability.sql  init-schemas.sql
docs/: 01-product-foundation.md  02-mvp-roadmap.md  03-technical-architecture.md  04-detailed-backlog.md  05-module-licensing-architecture.md  06-hub-company-provisioning.md  AUDIT-KNOWLEDGE-MAP.md
frontend/: .env.example  .env.vercel  Dockerfile  capacitor.config.ts  dev-preview.html  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/WorkBase.Contracts/: ContractsMarker.cs  IEmailSender.cs  IEmployeeAccessProvisioningQueue.cs  IEmployeeAccessStatusService.cs  IHubEmployeeIdentityLinker.cs  IKeycloakAdminService.cs  INotificationService.cs  IOrganizationLookupService.cs  (+3 more)
tools/: backup-db.sh  deploy.sh  restore-db.sh  setup-staging.sh
(+1069 files in other folders)
