[package]
name = "workbase-desktop"
version = "0.1.0"
description = "WorkBase Desktop — Tauri wrapper for the React SPA"
authors = ["WorkBase Team"]
edition = "2021"

[lib]
name = "workbase_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
